# Underacted-Robotics-in-GZ-Sim

./: README.md
Double-Pendulum/: CMakeLists.txt  RUN_GAZEBO.bash  world.sdf
Double-Pendulum/src/: DataLogger.cc  DataLogger.hh  FeedbackCancellation.cc  FeedbackCancellation.hh  PIDController.cc  PIDController.hh
Double-Pendulum/src/analysis/: main.py
Double-Pendulum/worlds/: basic_cylinder.xacro  basic_sphere.xacro  double_pendulum.xacro  ground_plane.xacro  world.xacro
Simple-Pendulum/: CMakeLists.txt  PID_Pendulum.cc  PID_Pendulum.hh  RUN_GAZEBO.bash  basic_box.xacro  basic_cylinder.xacro  basic_plane.xacro  basic_sphere.xacro  pendulum.sdf  pendulum.xacro  world.sdf  world.xacro
Simple-Pendulum/logs/: log_0.csv  log_22.csv
Simple-Pendulum/src/: Energy_Shaping.cc  Energy_Shaping.hh  Gravity_Invert.cc  Gravity_Invert.hh  PID_Pendulum.cc  PID_Pendulum.hh  TEMPLATE.cc  TEMPLATE.hh
Simple-Pendulum/videos/: Screencast from 2025-03-24 11-35-25.webm
Simple-Pendulum/worlds/: basic_plane.xacro  pendulum.xacro  world.xacro
